@@ -30,6 +30,7 @@ Changes in SG 1.1
   This command is based on the UrbanTerror 4.1 implementation, thanks guys.
   See http://www.urbanterror.net
 - Added ui_farclip cvar to be used as farclip management facility for UI part
+- Fixed another bad prediction case when cg_boostfps is set, thanks again to Joe Kari for the reporting
 
 Changes in SG 1.1b4-20100116
 ******************
